# MQ-One

./: README.md
1-Proof of Concept (POC)/1-CAD/: Adafruit Ultimate GPS.step  BNO085.step  bme280.STEP
1-Proof of Concept (POC)/2-ECAD/: BME280.kicad_sch  BNO085.kicad_sch  Display.kicad_sch  EEPPROMs.kicad_sch  ESP32.kicad_sch  ICM-20948.kicad_sch  LEAT.kicad_sch  MAX98357.kicad_sch  Miscelaneous.kicad_sch  OV5640.kicad_sch  PA116D.kicad_sch  POC-TB.kicad_pcb  POC-TB.kicad_prl  POC-TB.kicad_pro  POC-TB.kicad_sch  Power.kicad_sch  SD-Slot.kicad_sch  place_footprints.ini
2-Engineering Validation Test (EVT)/1-CAD/: CameraModule.f3z  EVT-Panel.f3d  MakerModule.f3d  MountainModule.f3z
2-Engineering Validation Test (EVT)/3-Firmware/2-MQOneOS/components/BNO085/: BNO085.c  CMakeLists.txt  euler.c  sh2.c  sh2_SensorValue.c  sh2_util.c  shtp.c
2-Engineering Validation Test (EVT)/3-Firmware/2-MQOneOS/components/BNO085/include/: BNO085.h  euler.h  sh2.h  sh2_SensorValue.h  sh2_err.h  sh2_hal.h  sh2_util.h  shtp.h
3-KiCad_library/1-Symbols/: TFG.bak  TFG.kicad_sym
3-KiCad_library/3-3D/: 1-2328702-0.stp  2-2328724-1.stp  5051102491.step  9HT10-32.768KBZF-T.step  APDS-9960.stp  ASE-24.000MHZ-L-R-T.stp  ATSAMD09D14A-MUT.stp  ATSAMD21E17D-MUT.stp  ATSAMD21G18A-MUT.stp  BAT54CWT1G.stp  BK-5067.step  BME280.stp  CAY16-4702F4LF.stp  DESD3V3S1BL-7B.step  DS28E07P+.step  FD5640.step  LQH44PN1R0MPRL.STEP  MCP73833T.step  MSD-1-A.stp  NCV6324BMTAATBG.step  NTLJF3117PT1G.stp  OV5640.STEP  PA1010D.step  PTS815.stp  S2B-ZR-SM4A-TF.step  SFC-115-T2-F-D-A-K.step  SI3585CDV-T1-GE3.stp  (+7 more)
(+229 files in other folders)
